# synopsia

./: .gitignore  CMakeLists.txt
include/synopsia/: color.hpp  entropy.hpp  minimap_data.hpp  minimap_data_interface.hpp  minimap_widget.hpp  plugin.hpp  types.hpp
include/synopsia/common/: color.hpp  qt_ida_compat.hpp  qt_ida_compat_post.hpp  types.hpp
include/synopsia/core/: feature_base.hpp  feature_registry.hpp
include/synopsia/features/binary_map_3d/: feature.hpp  map_data.hpp
include/synopsia/features/entropy_minimap/: feature.hpp
include/synopsia/features/function_search/: data_interface.hpp  feature.hpp  function_data.hpp  search_widget.hpp
include/synopsia/imgui/: qt_imgui_widget.hpp
src/: entropy.cpp  minimap_data.cpp  minimap_widget.cpp  plugin.cpp  qt_compat.cpp  widget_bridge.cpp
src/common/: color.cpp
src/core/: feature_registry.cpp  plugin.cpp
src/features/binary_map_3d/: feature.cpp  imgui_widget.cpp  map_data.cpp
src/features/entropy_minimap/: feature.cpp
src/features/function_search/: feature.cpp  function_data.cpp  imgui_widget.cpp
src/imgui/: qt_imgui_widget.cpp
